deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-dvwa
  name: web-dvwa
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: web-dvwa
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web-dvwa
    spec:
      containers:
      - image: vulnerables/web-dvwa
        imagePullPolicy: Always
        name: web-dvwa
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/www/html/config/config.inc.php
          name: config
          subPath: config.inc.php
        - mountPath: /etc/php/7.0/apache2/php.ini
          name: php-ini
          subPath: php.ini
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: web-dvwa-config
        name: config
      - configMap:
          defaultMode: 420
          name: php-config
        name: php-ini
