svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-dvwa
    svc: web-dvwa
  name: web-dvwa
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    svc: web-dvwa
  sessionAffinity: None
  type: ClusterIP
